@@ -46,7 +46,7 @@ test {
 }
 
 application {
-    mainClass.set("src/main/java/skd/Launcher.java")
+    mainClass.set("fx.Launcher")
 }
 
 
@@ -57,4 +57,8 @@ shadowJar {
 
 run{
     standardInput = System.in
+    jvmArgs = [
+            '--module-path', "${System.getProperty('user.home')}/Downloads/javafx-sdk-17.0.12/lib",
+            '--add-modules', 'javafx.controls,javafx.fxml'
+    ]
 }
